# tata

./: Cargo.toml
cli/: Cargo.toml  build.rs
cli/migrations/2020-05-17-220039_create_users/: up.sql
cli/src/: command.rs  command_line.rs  core.rs  db.rs  error.rs  events.rs  ffi.rs  main.rs  models.rs  network.rs  onboarding.rs  reactor.rs  schema.rs
cli/src/ffi/: tata_core.rs
cli/src/models/: event.rs  peer_id.rs  secret.rs  user.rs
cli/src/network/: core.rs  events.rs  reactor.rs
cli/src/repos/: users.rs
cli_old/migrations/2020-05-17-220039_create_users/: up.sql
cli_old/src/: error.rs  ffi.rs  reactor.rs
cli_old/src/models/: user.rs
core/: Cargo.toml  cbindgen.toml
core/headers/: tata_core.h
core/migrations/2020-05-17-220039_create_users/: up.sql
core/src/: db.rs  error.rs  event.rs  ffi.rs  lib.rs  network.rs  utils.rs
core/src/network/: core_behaviour.rs  metadata.rs  private_chat.rs
core/src/network/metadata/: behaviour.rs  handler.rs  protocol.rs
core/src/network/private_chat/: behavior.rs  error.rs  handler.rs  protocol.rs
examples/c/: Makefile  main.c
primitives/: Cargo.toml
primitives/src/: bytearray.rs  cevent.rs  cpair.rs  event.rs  ffi.rs  lib.rs  log.rs  metadata.rs  peer_id.rs  ring_vec.rs
primitives/src/ffi/: bytearray.rs  event.rs  keypair.rs
proto/: Cargo.toml
tata_mobile/: README.md  pubspec.yaml
tata_mobile/android/app/: build.gradle
tata_mobile/android/app/src/main/: AndroidManifest.xml
tata_mobile/android/app/src/main/kotlin/com/example/tata_mobile/: MainActivity.kt
tata_mobile/android/app/src/profile/: AndroidManifest.xml
tata_mobile/ios/Runner/: Info.plist
tata_mobile/ios/Runner.xcodeproj/: project.pbxproj
tata_mobile/lib/: main.dart  onboarding.dart  themes.dart  utils.dart
tata_mobile/lib/screens/: onboarding.dart
tata_mobile/lib/screens/onboarding/: onboarding.dart  onboarding_screen.dart  primary_key.dart  screen_wave.dart  welcome.dart
tata_mobile/test/: widget_test.dart
