[package]
name = "tata-cli"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
async-std = { version = "1.5", features = ["attributes"] }
futures = "0.3"
bs58 = "0.3"
derive_more = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
once_cell = "1.4"
primitives = {path = "../primitives"}

