[package]
name = "cli"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
async-std = { version = "1.7", features = ["attributes"] }
futures = "0.3"