[package]
name = "tata-core"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]
edition = "2018"

[[bin]]
name = "cli"
path = "bin/main.rs"

[lib]
name = "core"

[dependencies]
async-std = "1.5"
futures = "0.3"
libp2p = "0.18"
log = "0.4"
env_logger = "0.7"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
