[package]
name = "tata-core"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-std = "1.5"
futures = "0.3"
futures-timer = "3.0"
libp2p = "0.31"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
derive_more = "0.14"
primitives = { path = "../primitives" }
env_logger = "0.7"
